# fantastic-waddle

./: .gitignore  README.md  cabal.project  default.nix  index.html  release.nix
.obelisk/impl/: github.json
backend/: backend.cabal
backend/src/: Backend.hs
comparison/: joy_index.html  joydivision.js
devel/: Devel.hs
finalout/css/: bootstrap.min.css.map  link_nix_bootstrap_css.sh  reflexive-art.css
finalout/js/: all.min.js  all.min.js.map
frontend/: frontend.cabal  shell.nix
frontend/exe/: Main.hs
frontend/src/: Frontend.hs  Internal.hs  Squares.hs  main.hs
frontend/src/API/: WebAudio.hs
frontend/src/Canvas2D/: Internal.hs  JoyDivision.hs  TiledLines.hs
frontend/src/SVG/: DMapFun.hs  Squares.hs  Types.hs
frontend/src/Styling/: Bootstrap.hs
frontend/src/WebGL/: GOL.hs  GOLCube.hs  Internal.hs  Statics.hs  Types.hs
frontend/src/WebGL/Shaders/: GOL.hs  GOLCube.hs
nix/: gristle.json  gristle.nix  ixshader.json  ixshader.nix  reflex-dom-canvas.json  reflex-dom-canvas.nix  reflex-dom-svg.json  reflex-dom-svg.nix  reflex-platform.json  twitterBootstrap4.json  twitterBootstrap4.nix  update.sh
presentation/: composeconf.html  composeconf.org  index.html
presentation/data/58/851f7e-84c1-42de-b1cc-719edc7d62ce/: GOLCube.hs
static/css/: bootstrap.min.css  link_nix_bootstrap_css.sh  reflexive-art.css
